--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8" />
     <title>Manuel Belgrano N°3</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content="Free HTML Templates" name="keywords" />
-    <meta content="Free HTML Templates" name="description" />
+    <meta content="Pagina Oficial - Manuel Belgrano N°3" name="keywords" />
+    <meta content="Pagina Oficial - Manuel Belgrano N°3" name="description" />
 
     <!-- Icono -->
     <link rel="icon" href="img/logo mb.png" sizes="32x32" type="image/png" />
