--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                   Página Oficial
                 </h4>
                 <h3 class="display-2 text-capitalize text-white mb-4">
-                  "Crecer es aprender."
+                  "Educar para la paz"
                 </h3>
                 <a class="btn btn-primary py-3 px-5 mt-2" href="#">San Luis</a>
               </div>
@@ -447,6 +447,53 @@
       </div>
     </div>
     <!-- About End -->
+
+    
+    <!-- Calendario escolar-->
+    <!-- Sección de Calendario Escolar -->
+    <div class="container my-5">
+      <div class="text-center">
+        <h2
+          class="fw-bold text-primary mb-3 animate__animated animate__fadeInDown"
+        >
+          📅 Calendario Escolar
+        </h2>
+        <p class="text-muted mb-4 animate__animated animate__fadeInUp">
+          Planificá tu año escolar con el calendario oficial.
+        </p>
+      </div>
+
+      <!-- Calendario embebido en PDF -->
+      <div
+        class="ratio ratio-4x3 shadow-lg rounded overflow-hidden animate__animated animate__zoomIn"
+      >
+        <iframe
+          src="documentos/calendario.pdf"
+          type="application/pdf"
+          width="100%"
+          height="600px"
+          style="border: none"
+        >
+          <p>
+            Tu navegador no puede mostrar PDFs.
+            <a href="documentos/calendario.pdf" target="_blank"
+              >Descargar calendario</a
+            >.
+          </p>
+        </iframe>
+      </div>
+
+      <!-- Botón de descarga -->
+      <div class="text-center mt-4 animate__animated animate__fadeInUp">
+        <a
+          href="documentos/calendario.pdf"
+          target="_blank"
+          class="btn btn-outline-primary btn-lg"
+        >
+          <i class="bi bi-download me-2"></i>Descargar PDF
+        </a>
+      </div>
+    </div>
 
     <!-- Footer Start -->
     <div
