Fix HTML structure and cleanup

--- a/docentes.html
+++ b/docentes.html
@@ -8,14 +8,10 @@
     <meta content="Free HTML Templates" name="description" />
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon" />
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Roboto:wght@300;500;700&display=swap"
-      rel="stylesheet"
-    />
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Roboto:wght@300;500;700&display=swap" rel="stylesheet" />
 
     <!-- Font Awesome -->
     <link
@@ -423,8 +419,6 @@ secretariamanuelbelgrano3@gmail.com</p>
     ></script>
 
     <!-- Otros scripts -->
-    <script src="mail/jqBootstrapValidation.min.js"></script>
-    <script src="mail/contact.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
