--- a/nosotros.html
+++ b/nosotros.html
@@ -9,7 +9,6 @@
     <meta content="Free HTML Templates" name="description">
 
     <!-- Favicon -->
-    <link href="img/favicon.ico" rel="icon">
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -169,7 +168,7 @@ secretariamanuelbelgrano3@gmail.com</small>
                     <div id="form-message" style="display:none;" class="alert alert-success">
                         ¡Tu mensaje fue enviado con éxito!
                     </div>
-                    <form name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/">
+                    <form id="contactForm" name="contact" method="POST" data-netlify="true" netlify-honeypot="bot-field" action="/">
                       <input type="hidden" name="form-name" value="contact" />
                         <p style="display:none">
                           <label>No llenar si eres humano: <input name="bot-field" /></label>
