--- a/problems.html
+++ b/problems.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="css/noterminada.css">
   
 </head>
+<body>
 <div class="bsod-container">
   <img src="img/mono.png" alt="mono">
   <div class="message">
