--- a/inscripciones.html
+++ b/inscripciones.html
@@ -9,13 +9,10 @@
   <meta content="Free HTML Templates" name="description" />
 
   <!-- Favicon -->
-  <link href="img/favicon.ico" rel="icon" />
 
   <!-- Google Web Fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com" />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Roboto:wght@300;500;700&display=swap"
-    rel="stylesheet" />
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Roboto:wght@300;500;700&display=swap" rel="stylesheet" />
 
   <!-- Font Awesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet" />
@@ -395,8 +392,6 @@ secretariamanuelbelgrano3@gmail.com</p>
 ></script>
 
 <!-- Otros scripts -->
-<script src="mail/jqBootstrapValidation.min.js"></script>
-<script src="mail/contact.js"></script>
 <script src="js/main.js"></script>
 <!--Login a Docentes-->
 <div id="loginModal" class="modal">
