Se agrego el poema de Nilda, problema para ingresar a docentes solucionado, agregue nombre de egresados

--- a/alum.html
+++ b/alum.html
@@ -127,7 +127,7 @@ secretariamanuelbelgrano3@gmail.com</small>
                 <a href="nosotros.html" class="nav-item nav-link">Nosotros</a>
               </div>
               <div class="fecha-container">
-                <span id="fecha"> </span>📅 <span id="clima"></span>
+                <span id="fecha"> </span>📅 
               </div>
             </div>
           </nav>
