--- a/index.html
+++ b/index.html
@@ -12,14 +12,20 @@
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Roboto:wght@300;500;700&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Roboto:wght@300;500;700&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Font Awesome -->
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css"
       rel="stylesheet"
     />
-<link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" rel="stylesheet" />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+      rel="stylesheet"
+    />
 
     <!-- Libraries Stylesheet -->
     <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet" />
@@ -139,9 +145,9 @@
                 </div>
                 <a href="nosotros.html" class="nav-item nav-link">Nosotros</a>
               </div>
-              <!--Fecha y clima -->
+              <!--Fecha-->
               <div class="fecha-container">
-                <span id="fecha"> </span>📅 <span id="clima"></span>
+                <span id="fecha"></span>📅 
               </div>
             </div>
           </nav>
@@ -417,9 +423,10 @@
         <div class="row">
           <div class="col-lg-5">
             <img
-              class="img-fluid rounded"
+              class="img-fluid rounded w-100 h-100 object-fit-cover"
               src="img/fotoportadaanimadamb.png"
               alt="foto portada animada"
+              style="object-fit: cover"
             />
           </div>
           <div class="col-lg-7 mt-4 mt-lg-0">
@@ -429,24 +436,104 @@
             >
               140 años enseñando
             </h2>
-            <h6 class="text-uppercase">Manuel Belgrano</h6>
-            <h1 class="mb-4">
-              "Nuestra escuela... donde cada paso es un verso y cada lección,
-              una historia compartida."
-            </h1>
-            <p>
-              Manos que ayudan, ojos que brillan, un rincón del mundo donde todo
-              empieza. Aquí crecemos, tú y yo, codo a codo... porque juntos,
-              siempre se aprende mejor.
+            <h6 class="text-uppercase">A través de los años</h6>
+
+            <div class="row">
+              <div class="col-md-4">
+                <pre
+                  style="
+                    white-space: pre-wrap;
+                    font-family: inherit;
+                    font-style: italic;
+                  "
+                >
+Hace muchos, muchos años
+tus puertas se abrieron de par en par.
+y a partir de ese momento
+no dejaste de educar.
+
+Elemental del Este 
+fue tu nombre inicial.
+pero unos años más tarde
+Tu nombre iba a cambiar. 
+
+Manuel Belgrano se llama
+en honor del general
+que nuestra bandera creara
+a orillas del Paraná
+            </pre
+                >
+              </div>
+              <div class="col-md-4">
+                <pre
+                  style="
+                    white-space: pre-wrap;
+                    font-family: inherit;
+                    font-style: italic;
+                  "
+                >
+Fueron pasando los años.
+Y nuestra escuela creció.
+La matrícula día a día 
+Se hizo cada vez más grande.
+
+San Luis estaba creciendo.
+Más niños para educar
+Y ella agrandó sus puertas.
+Para enseñar mucho más 
+
+También llegó jardinicito. 
+Que es hoy nivel inicial
+Y durante 30 años
+Sección Sordos supo estar
+            </pre
+                >
+              </div>
+              <div class="col-md-4">
+                <pre
+                  style="
+                    white-space: pre-wrap;
+                    font-family: inherit;
+                    font-style: italic;
+                  "
+                >
+A fines del siglo XX
+3° ciclo llegaría
+Y después de mucho esfuerzo 
+El ciclo superior se incorporaría.
+
+Ahora ya es un centro. 
+Sus aulas llenas están.
+De alumnos de todos los ciclos
+Y sus estudios poder terminar
+
+Ya pasaron ciento cuarenta años.
+De aquel día sin igual
+Que con orgullo y alegría
+Sus puertas se abrieron de par en par.
+            </pre
+                >
+              </div>
+            </div>
+
+            <p
+              class="mt-3"
+              style="
+                white-space: pre-wrap;
+                font-family: inherit;
+                font-style: italic;
+              "
+            >
+              Ex Directora - Nilda Molinari
             </p>
-            <a href="problems.html" class="btn btn-primary mt-2">Historia</a>
+            <!--<a href="problems.html" class="btn btn-primary mt-2">Historia</a> -->
           </div>
         </div>
       </div>
     </div>
+
     <!-- About End -->
 
-    
     <!-- Calendario escolar-->
     <!-- Sección de Calendario Escolar -->
     <div class="container my-5">
