--- a/nosotros.html
+++ b/nosotros.html
@@ -121,7 +121,7 @@ secretariamanuelbelgrano3@gmail.com</small>
                 
               </div>
               <div class="fecha-container">
-                <span id="fecha"> </span>📅 <span id="clima"></span>
+                <span id="fecha"> </span>📅 
               </div>
             </div>
           </nav>
