--- a/carga.html
+++ b/carga.html
@@ -120,7 +120,7 @@
                 
               </div>
               <div class="fecha-container">
-                <span id="fecha"> </span>📅 <span id="clima"></span>
+                <span id="fecha"> </span>📅 
               </div>
             </div>
           </nav>
