--- a/egresados.html
+++ b/egresados.html
@@ -127,7 +127,7 @@ secretariamanuelbelgrano3@gmail.com</small>
                 <a href="nosotros.html" class="nav-item nav-link">Nosotros</a>
               </div>
               <div class="fecha-container">
-                <span id="fecha"> </span>📅 <span id="clima"></span>
+                <span id="fecha"> </span>📅 
               </div>
             </div>
           </nav>
@@ -293,7 +293,7 @@ secretariamanuelbelgrano3@gmail.com</small>
           <div class="col-lg-6 pt-5 pb-lg-5">
             <div class="feature-text bg-white rounded p-lg-5">
               <h6 class="text-uppercase">2024</h6>
-              <h1 class="mb-4">Nombre</h1>
+              <h1 class="mb-4">LEUCACIOS</h1>
               <div class="d-flex mb-4">
                 <div class="ml-4">
                   <h5></h5>
