--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
     />
     <!--MOdal-->
     <link rel="stylesheet" href="css/modal.css" />
-    
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="css/style.css" rel="stylesheet" />
@@ -379,9 +378,7 @@
         <div class="container-fluid py-5">
           <div class="row">
             <div class="col-lg-12 mb-4">
-              <h4 class="font-weight-semi-bold text-primary mb-4">
-                Redes y Provincia
-              </h4>
+              <h4 class="font-weight-semi-bold text-primary mb-4">Redes</h4>
               <div class="card shadow-lg rounded-3">
                 <div class="card-body p-3">
                   <div class="row">
@@ -401,16 +398,21 @@
                         allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
                       ></iframe>
                     </div>
-                    <div class="col-lg-6">
-                      <div class="embed-container">
-                        <iframe
-                          src="https://agenciasanluis.com/2024/02/26/922635-el-gobernador-dio-inicio-a-las-clases-en-la-escuela-n3-manuel-belgrano/"
-                          width="100%"
-                          height="700"
-                          style="border: 0"
-                          loading="lazy"
-                        ></iframe>
-                      </div>
+                    <div class="col-lg-6 d-flex align-items-center">
+                      <video
+                        src="vid/video principal.mp4"
+                        autoplay
+                        muted
+                        loop
+                        playsinline
+                        style="
+                          width: 100%;
+                          border-radius: 12px;
+                          box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+                        "
+                      >
+                        Tu navegador no soporta la reproducción de video.
+                      </video>
                     </div>
                   </div>
                 </div>
@@ -522,16 +524,24 @@ Sus puertas se abrieron de par en par.
               </div>
             </div>
 
-            <p
-              class="mt-3"
-              style="
-                white-space: pre-wrap;
-                font-family: inherit;
-                font-style: italic;
-              "
+            <div
+              class="d-flex align-items-center mt-4"
+              style="font-style: italic"
             >
-              Ex Directora - Nilda Molinari
-            </p>
+              <img
+                src="img/nilda.jpg"
+                alt="Nilda Molinari"
+                class="rounded-circle mr-3"
+                style="
+                  width: 50px;
+                  height: 50px;
+                  object-fit: cover;
+                  margin-right: 10px;
+                "
+              />
+              <span>Ex Directora - Nilda Molinari</span>
+            </div>
+
             <!--<a href="problems.html" class="btn btn-primary mt-2">Historia</a> -->
           </div>
         </div>
