Agregue horarios a la seccion de informacion alumnos

--- a/alum.html
+++ b/alum.html
@@ -122,7 +122,7 @@ secretariamanuelbelgrano3@gmail.com</small>
                     >
                     <a href="egresados.html" class="dropdown-item">Egresados</a>
                     <a href="calendario.html" class="dropdown-item"
-                      >Calendario Escolar</a
+                      >Información Escolar</a
                     >
                   </div>
                 </div>
