--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                     >
                     <a href="egresados.html" class="dropdown-item">Egresados</a>
                     <a href="calendario.html" class="dropdown-item"
-                      >Calendario Escolar</a
+                      >Información Escolar</a
                     >
                   </div>
                 </div>
@@ -533,8 +533,8 @@ Sus puertas se abrieron de par en par.
                 alt="Nilda Molinari"
                 class="rounded-circle mr-3"
                 style="
-                  width: 50px;
-                  height: 50px;
+                  width: 100px;
+                  height: 100px;
                   object-fit: cover;
                   margin-right: 10px;
                 "
