--- a/index.html
+++ b/index.html
@@ -243,6 +243,27 @@
       </div>
     </div>
     <!-- Fin del carrusel-->
+    <!-- Video Institucional -->
+    <!-- Video Institucional -->
+    <div class="container-fluid py-5 bg-black">
+      <div class="container text-center">
+        <h2 class="text-black mb-4">🎉 ¡Feliz cumpleaños escuela! 🎉</h2>
+        <div
+          class="ratio ratio-16x9 rounded shadow-lg overflow-hidden"
+          style="max-width: 900px; margin: 0 auto"
+        >
+          <video
+            autoplay
+            muted
+            playsinline
+            style="width: 100%; height: 100%; object-fit: cover"
+          >
+            <source src="vid/aniversario escolar.mp4" type="video/mp4" />
+            Tu navegador no soporta la reproducción de video.
+          </video>
+        </div>
+      </div>
+    </div>
 
     <!-- NOTICIAS DE LA ESCUELA  -->
     <div class="text-center pb-2">
@@ -539,7 +560,7 @@ Sus puertas se abrieron de par en par.
                   margin-right: 10px;
                 "
               />
-              <span>Ex Directora - Nilda Molinari</span>
+              <span>MOLINARI, Nilda - Ex Directora </span>
             </div>
 
             <!--<a href="problems.html" class="btn btn-primary mt-2">Historia</a> -->
@@ -709,5 +730,6 @@ Sus puertas se abrieron de par en par.
         <p id="errorMsg"></p>
       </div>
     </div>
+    <!-- Modal de video Aniversario -->
   </body>
 </html>
