--- a/index.html
+++ b/index.html
@@ -252,12 +252,13 @@
           class="ratio ratio-16x9 rounded shadow-lg overflow-hidden"
           style="max-width: 900px; margin: 0 auto"
         >
-          <video
+            <video
             autoplay
             muted
             playsinline
+            loop
             style="width: 100%; height: 100%; object-fit: cover"
-          >
+            >
             <source src="vid/aniversario escolar.mp4" type="video/mp4" />
             Tu navegador no soporta la reproducción de video.
           </video>
