--- a/egresados.html
+++ b/egresados.html
@@ -11,7 +11,10 @@
 
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Roboto:wght@300;500;700&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Roboto:wght@300;500;700&display=swap"
+      rel="stylesheet"
+    />
 
     <!-- Font Awesome -->
     <link
@@ -56,8 +59,7 @@
             <div class="col-lg-7 text-left">
               <div class="h-100 d-inline-flex align-items-center py-2 px-3">
                 <i class="fa fa-envelope text-primary mr-2"></i>
-                <small>
-secretariamanuelbelgrano3@gmail.com</small>
+                <small> secretariamanuelbelgrano3@gmail.com</small>
               </div>
               <div class="h-100 d-inline-flex align-items-center py-2 px-2">
                 <i class="fa fa-phone-alt text-primary mr-2"></i>
@@ -133,9 +135,7 @@ secretariamanuelbelgrano3@gmail.com</small>
                 </div>
                 <a href="nosotros.html" class="nav-item nav-link">Nosotros</a>
               </div>
-              <div class="fecha-container">
-                <span id="fecha"> </span>📅 
-              </div>
+              <div class="fecha-container"><span id="fecha"> </span>📅</div>
             </div>
           </nav>
         </div>
@@ -354,10 +354,8 @@ secretariamanuelbelgrano3@gmail.com</small>
               style="text-decoration: none"
             >
               <div class="ml-3">
-                <h5 class="text-white">
-¿Quieres escribirnos?</h5>
-                <p class="m-0">
-secretariamanuelbelgrano3@gmail.com</p>
+                <h5 class="text-white">¿Quieres escribirnos?</h5>
+                <p class="m-0">secretariamanuelbelgrano3@gmail.com</p>
               </div>
             </a>
           </div>
@@ -481,5 +479,7 @@ secretariamanuelbelgrano3@gmail.com</p>
         <p id="errorMsg"></p>
       </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.6.0/dist/confetti.browser.min.js"></script>
+    <script src="js/confeti.js"></script>
   </body>
 </html>
