Agregar fotos y posteo

--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
                     >Alumnos</a
                   >
                   <div class="dropdown-menu rounded-0 m-0">
+                    <a href="galeria.html" class="dropdown-item">Posteos</a>
                     <a href="inscripciones.html" class="dropdown-item"
                       >Inscripciones</a
                     >
