bloqueo de pagina NOSOTROS.

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                     >
                   </div>
                 </div>
-                <a href="nosotros.html" class="nav-item nav-link">Nosotros</a>
+                <a href="problems.html" class="nav-item nav-link">Nosotros</a>
               </div>
               <!--Fecha-->
               <div class="fecha-container"><span id="fecha"></span>📅</div>
