--- a/alum.html
+++ b/alum.html
@@ -126,7 +126,7 @@ secretariamanuelbelgrano3@gmail.com</small>
                     >
                   </div>
                 </div>
-                <a href="nosotros.html" class="nav-item nav-link">Nosotros</a>
+                <a href="problems.html" class="nav-item nav-link">Nosotros</a>
               </div>
               <div class="fecha-container">
                 <span id="fecha"> </span>📅 
