--- a/egresados.html
+++ b/egresados.html
@@ -133,7 +133,7 @@
                     >
                   </div>
                 </div>
-                <a href="nosotros.html" class="nav-item nav-link">Nosotros</a>
+                <a href="problems.html" class="nav-item nav-link">Nosotros</a>
               </div>
               <div class="fecha-container"><span id="fecha"> </span>📅</div>
             </div>
