saque temporalmente la pagina problems de administracion del flooter

--- a/calendario.html
+++ b/calendario.html
@@ -346,7 +346,7 @@
         <div class="col-md-6 text-center text-md-left mb-3 mb-md-0">
           <p class="m-0 text-white">
             &copy;
-            <a class="font-weight-bold" href="nosotros.html">Administración</a>.
+            <a class="font-weight-bold" href="problems.html">Administración</a>.
             Escuela Manuel Belgrano
           </p>
         </div>
