--- a/galeria.html
+++ b/galeria.html
@@ -357,7 +357,7 @@
         <div class="col-md-6 text-center text-md-left mb-3 mb-md-0">
           <p class="m-0 text-white">
             &copy;
-            <a class="font-weight-bold" href="nosotros.html">Administración</a>.
+            <a class="font-weight-bold" href="problems.html">Administración</a>.
             Escuela Manuel Belgrano
           </p>
         </div>
