--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@ Sus puertas se abrieron de par en par.
         <div class="col-md-6 text-center text-md-left mb-3 mb-md-0">
           <p class="m-0 text-white">
             &copy;
-            <a class="font-weight-bold" href="nosotros.html">Administración</a>.
+            <a class="font-weight-bold" href="problems.html">Administración</a>.
             Escuela Manuel Belgrano
           </p>
         </div>
