--- a/calendario.html
+++ b/calendario.html
@@ -141,9 +141,11 @@
                     >Alumnos</a
                   >
                   <div class="dropdown-menu rounded-0 m-0">
+                    <a href="galeria.html" class="dropdown-item">Posteos</a>
                     <a href="inscripciones.html" class="dropdown-item"
                       >Inscripciones</a
                     >
+
                     <a href="egresados.html" class="dropdown-item">Egresados</a>
                     <a href="calendario.html" class="dropdown-item"
                       >Información Escolar</a
