--- a/carga.html
+++ b/carga.html
@@ -114,9 +114,11 @@
                     >Alumnos</a
                   >
                   <div class="dropdown-menu rounded-0 m-0">
+                    <a href="galeria.html" class="dropdown-item">Posteos</a>
                     <a href="inscripciones.html" class="dropdown-item"
                       >Inscripciones</a
                     >
+
                     <a href="egresados.html" class="dropdown-item">Egresados</a>
                     <a href="problems.html" class="dropdown-item">Taller de Lectura</a
                     >
