--- a/inscripciones.html
+++ b/inscripciones.html
@@ -116,6 +116,7 @@ secretariamanuelbelgrano3@gmail.com</small>
                   >Alumnos</a
                 >
                 <div class="dropdown-menu rounded-0 m-0">
+                  <a href="galeria.html" class="dropdown-item">Posteos</a>
                   <a href="inscripciones.html" class="dropdown-item"
                     >Inscripciones</a
                   >
