--- a/posteo2.html
+++ b/posteo2.html
@@ -228,6 +228,60 @@
         margin-top: -5px;
         margin-bottom: 10px;
       }
+
+      /* Lightbox para ampliar imágenes de los alumnos */
+      .image-lightbox {
+        position: fixed;
+        inset: 0;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background: rgba(0, 0, 0, 0.8);
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 0.2s ease, visibility 0.2s ease;
+        z-index: 2000;
+        padding: 20px;
+      }
+
+      .image-lightbox.is-visible {
+        opacity: 1;
+        visibility: visible;
+      }
+
+      .image-lightbox__img {
+        max-width: 90vw;
+        max-height: 90vh;
+        border-radius: 8px;
+        box-shadow: 0 8px 24px rgba(0, 0, 0, 0.45);
+      }
+
+      .image-lightbox__close {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        background: rgba(0, 0, 0, 0.6);
+        border: none;
+        color: #fff;
+        font-size: 28px;
+        line-height: 1;
+        width: 44px;
+        height: 44px;
+        border-radius: 50%;
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+
+      .image-lightbox__close:focus {
+        outline: 2px solid #fff;
+        outline-offset: 2px;
+      }
+
+      body.lightbox-open {
+        overflow: hidden;
+      }
     </style>
 
     <div class="galeria-container">
@@ -1673,6 +1727,24 @@
     </div>
     <!-- FIN MODALES ALUMNOS -->
 
+    <!-- Lightbox de imágenes ampliadas -->
+    <div class="image-lightbox" id="image-lightbox" aria-hidden="true">
+      <button
+        type="button"
+        class="image-lightbox__close"
+        id="image-lightbox-close"
+        aria-label="Cerrar imagen ampliada"
+      >
+        &times;
+      </button>
+      <img
+        id="image-lightbox-img"
+        class="image-lightbox__img"
+        src=""
+        alt="Imagen ampliada"
+      />
+    </div>
+
     <!-- Fin sección galería -->
 
     <!-- Footer Start -->
@@ -1824,6 +1896,53 @@
     <!-- Otros scripts -->
     <script src="js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script>
+      (function () {
+        const lightbox = document.getElementById("image-lightbox");
+        const lightboxImg = document.getElementById("image-lightbox-img");
+        const closeBtn = document.getElementById("image-lightbox-close");
+        const modalImages = document.querySelectorAll(
+          ".alumnos-modales img.img-fluid"
+        );
+
+        if (!lightbox || !lightboxImg || !closeBtn || !modalImages.length) return;
+
+        function openLightbox(event) {
+          const img = event.currentTarget;
+          lightboxImg.src = img.src;
+          lightboxImg.alt = img.alt || "Imagen ampliada";
+          lightbox.classList.add("is-visible");
+          document.body.classList.add("lightbox-open");
+          lightbox.setAttribute("aria-hidden", "false");
+        }
+
+        function closeLightbox() {
+          lightbox.classList.remove("is-visible");
+          document.body.classList.remove("lightbox-open");
+          lightbox.setAttribute("aria-hidden", "true");
+          lightboxImg.src = "";
+        }
+
+        modalImages.forEach((img) => {
+          img.style.cursor = "zoom-in";
+          img.addEventListener("click", openLightbox);
+        });
+
+        closeBtn.addEventListener("click", closeLightbox);
+        lightbox.addEventListener("click", (event) => {
+          if (event.target === lightbox) {
+            closeLightbox();
+          }
+        });
+
+        document.addEventListener("keydown", (event) => {
+          if (event.key === "Escape" && lightbox.classList.contains("is-visible")) {
+            closeLightbox();
+          }
+        });
+      })();
+    </script>
 
     <!--Login a Docentes-->
     <div id="loginModal" class="modal">
